src/QMenu.h


// 
// This file has been automatically generated by RaQt_maker V0.0.4.
// To modify and regenerate it, see the source code available here: 
//         https://github.com/yguillemot/RaQt_maker
// 

#include <stdint.h>
#include <QtWidgets>
#include "externc.h"

EXTERNC void * QWQMenuCtor_1(void * parent);
EXTERNC void * SCWQMenuCtor_1(void * parent);
EXTERNC void * QWQMenuCtor_2(char * title, void * parent);
EXTERNC void * SCWQMenuCtor_2(char * title, void * parent);
EXTERNC void * QWQMenuaddAction_1(void * obj, char * text);
EXTERNC void * QWQMenuexec_1(void * obj);
EXTERNC void QWvalidateCB_QMenu(void *obj, int32_t objId, char *methodName);
EXTERNC void QWQMenuDtor(void *);
EXTERNC void SCWQMenuDtor(void *);